# Senfi-Backend

./: .env.example  .gitignore  API_DOCUMENTATION.md  BACKUP_GUIDE.md  DEVELOPMENT_ENV.md  Dockerfile  ENVIRONMENT_SETUP.md  FINAL_SUMMARY.md  PERFORMANCE_MONITORING.md  README.md  SECURITY_AUDIT_REPORT.md  SECURITY_TODO.md  docker-entrypoint.sh  fix_blog_post_tags.py  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: deploy-development.yml  deploy-production.yml  pr-checks.yml
api/: admin.py  choices.py  exceptions.py  middleware.py  models.py  performance.py  serializers.py  tests.py  urls.py  utils.py  validators.py  views.py
api/management/commands/: backup_db.py  (+4 more)
api/migrations/: 0001_initial.py  0002_alter_user_role_poll_polloption_pollvote.py  0002_user_dormitory_user_faculty.py  0003_pendingcampaign_label.py  0003_poll_max_choices.py  0004_remove_poll_is_public_poll_category.py  0004_verificationcode.py  0005_delete_verificationcode_user_created_at_and_more.py  0005_user_is_council_member.py  0006_remove_campaignsignature_api_campaig_campaig_05b055_idx_and_more.py  0006_remove_user_is_council_member_and_more.py  0007_alter_poll_category.py  0007_blogpost.py  0008_alter_blogpost_options_alter_blogpost_content_and_more.py  0008_alter_pollvote_unique_together_remove_pollvote_user_and_more.py  0009_alter_blogpost_category_alter_blogpost_tags.py  0009_pollvote_user.py  0010_alter_blogpost_category.py  0010_alter_blogpost_category_alter_blogpost_content_and_more.py  (+3 more)
senfi_django_backend/: asgi.py  settings.py  urls.py  wsgi.py
