[project]
name = "Senfi-Backend"
version = "1.1.0"
description = "Senfi Website Backend based on Django framework"
authors = [
    {name = "Senfi-Sharif", email = "senfi.stu@sharif.edu"},
]

dependencies = [
    "django>=5.2,<5.3",
    "djangorestframework>=3.15,<3.16",
    "djangorestframework-simplejwt>=5.3,<5.4",
    "drf-spectacular>=0.27,<0.28",
    "django-cors-headers>=4.3,<4.4",
    "python-dotenv>=1.0,<2.0",
    "dj-database-url>=2.1,<2.2",
    "gunicorn>=22.0,<23.0",
    "whitenoise[brotli]>=6.7,<6.8",
    "psycopg2-binary>=2.9,<2.10",
    "django-ratelimit>=4.1.0",
    "psutil>=7.1.0",
]

requires-python = ">=3.10"
readme = "README.md"
license = "GPL-3.0-or-later"

[project.urls]
Homepage = "https://github.com/senfi-sharif/senfi-backend"
Repository = "https://github.com/senfi-sharif/senfi-backend"

[project.optional-dependencies]
dev = [
    "ruff>=0.5,<0.6",
    "black>=24.4,<25.0",
    "pytest>=8.2,<8.3",
    "pytest-django>=4.8,<4.9",
]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.5,<0.6",
    "black>=24.4,<25.0",
    "pytest>=8.2,<8.3",
    "pytest-django>=4.8,<4.9",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "DJ", "DRF"]
ignore = []

[tool.black]
line-length = 100
target-version = ['py310']

[tool.setuptools]
packages = ["api", "senfi_django_backend"]
